<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/Item_Menu"
            android:title="@string/Item_Menu"
            android:enabled="false" />
        <item
            android:id="@+id/Item_Perfil"
            android:title="@string/Item_Perfil"
            android:icon="@drawable/ic_perfil2" />
        <item
            android:id="@+id/item_Inicio"
            android:title="@string/item_Inicio"
            android:icon="@drawable/ic_inicio" />
        <item
            android:id="@+id/Item_OH"
            android:title="@string/Item_OH"
            android:icon="@drawable/ic_oh2" />
        <item
            android:id="@+id/Item_BH"
            android:title="@string/Item_BH"
            android:icon="@drawable/ic_bh" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="logout" />
        </menu>
    </item>
</menu>
