<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Fragmentos.FragmentPerfilArrendador">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:layout_margin="10dp">

        <!-- FrameLayout for Image -->
        <FrameLayout
            android:id="@+id/l"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_perfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/a"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.FullyRounded" />
        </FrameLayout>

        <!-- CardView for Datos -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txt_informacion"
                    android:text="@string/Item_Datos"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- Nombre -->
                <TextView
                    android:text="@string/Item_Nombre"
                    android:layout_below="@id/txt_informacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/txt_nombres"
                    android:layout_below="@+id/txt_informacion"
                    android:text="@string/tv_nombres"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- Edad -->
                <TextView
                    android:text="@string/Item_Edad"
                    android:layout_below="@id/txt_nombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/txt_edad"
                    android:layout_below="@+id/txt_nombres"
                    android:text="@string/tv_edad"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- Número -->
                <TextView
                    android:text="@string/Item_Numero"
                    android:layout_below="@id/txt_edad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/txt_numero"
                    android:layout_below="@+id/txt_edad"
                    android:layout_marginTop="15dp"
                    android:text="@string/tv_numero"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txt_numero"
                    android:orientation="horizontal">

                    <!-- Otros elementos del layout -->

                    <Button
                        android:id="@+id/btn_contactar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contactar"
                        android:visibility="gone" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView for Cuartos Ofrecidos -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/RL_CO"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_cofrecidos"
                        android:paddingEnd="80dp"
                        android:text="@string/Item_COfrecidos"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_nuevo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_nuevo"
                        android:textAllCaps="true"
                        android:backgroundTint="@color/stay" />
                </LinearLayout>

                <!-- RecyclerView for Cuartos -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cuartolist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RL_CO"
                    android:layout_marginTop="8dp"
                    tools:listitem="@layout/cuarto_item"
                    android:padding="8dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- Horizontal LinearLayout for Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/stay"
                android:text="@string/item_btn_editar"
                android:textAllCaps="true"
                app:icon="@drawable/baseline_edit_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_csesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/stay"
                android:text="@string/item_btn_csesion"
                android:textAllCaps="true"
                app:icon="@drawable/ic_csesion" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
