<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_Gmail">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_registro"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/gmail"/>
        <!--Nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/edit_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_nombres"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Fecha de nacimiento-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/edit_f_nac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_f_nac"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Gmail-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/edit_gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Repetir password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edit_r_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_r_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:id="@+id/RL_Cod_Tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/TILF_Nac">

            <com.hbb20.CountryCodePicker
                android:id="@+id/selectorCod"
                android:gravity="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_rememberLastSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!--Numero Telefonico-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SCod"
                android:layout_toEndOf="@+id/selectorCod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp">

                <EditText
                    android:id="@+id/edit_telefono"
                    android:hint="@string/edit_telefono"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
        <!-- Añadir RadioGroup para seleccionar el tipo de usuario -->
        <RadioGroup
            android:id="@+id/radioGroupTipoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioEstudiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estudiante"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioArrendador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arrendador" />
        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registrar"
            android:text="@string/btn_registrar"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>





    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>